home page bg image updated

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -101,7 +101,12 @@
                     class="hl-link">on Google Play</a> for the ebook. The stories here are an introduction to the
                 book and its authors.
             </p> -->
-            <p>
+            <p class="text-center">
+                Wunungu Awara, formerly the Monash Country Lines Archive, began in 2011 to work in partnership with Indigenous Australian communities in their language preservation. 
+                Working on the premise that Indigenous communities already have the infrastructure to continue and preserve their language through intergenerational learning, Wunungu Awara supports the existing system by using 3D animation as tools to reengage and 
+                revitalise interest in language continuation, by reconnecting language and its people, and to assist in the preservation of language.
+            </p>
+            <p class="text-center">
                 The loss of a language is a lot more than just the loss of words. 
                 It is also the loss of identity, spirituality, cultural knowledge and values.
                 Using the latest 3D animation technology Indigenous stories and languages come to life – 
