--- a/livingarchive/static/css/styles.css
+++ b/livingarchive/static/css/styles.css
@@ -11804,3 +11804,21 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+
+.video-container {
+  position: relative;
+  max-width: 100%;
+  height: 0;
+  padding-bottom: 75.25%; /* Adjust the aspect ratio as needed */
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.video-container video {
+  position: absolute;
+  top: 19;
+  left: 0;
+  width: 100%;
+  height: auto;
+}
