--- a/blog/templates/blog/blog_detail_page.html
+++ b/blog/templates/blog/blog_detail_page.html
@@ -4,6 +4,29 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+
+<style>
+.video-container {
+    position: relative;
+    max-width: 500px; /* Adjust the maximum width as needed */
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    margin: 0 auto; /* Center the video horizontally */
+    overflow: hidden;
+}
+
+.video-container iframe, 
+.video-container object, 
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+</style>
 {% block content %}
     <head>
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
@@ -63,10 +86,18 @@
             ⚠️ If you have access, please do not share without permission.
         {% endif %}
     </p>
+    <br>
+    <br>
+    <div class="text-center">
+    {% if self.title %}
+
+    <strong>{{ self.intro }}</strong>
+    {% endif %}
+
+    <br>
+    <br>
     {% if self.video %}
     {% load wagtailvideos_tags %}
-
-    <div class="text-center">
 
     <a href="{{ post.url }}">
         <video class="img-fluid" width="500" height="200" controls>
@@ -74,11 +105,15 @@
         </video>
     </div>
     </a>
-
-    {% else %}
-
-
+    {% endif %}
+    {% if self.body %}
     <div class="text-center">
+        <br>
+        {% for block in self.body %}
+        {% if block.block_type == 'paragraph' %}
+        {{ block.value }}
+        {% endif %}  
+        {% endfor %}
         <br>
         {% for block in self.body %}
             {% if block.block_type == 'video_embeded' %}
@@ -90,15 +125,7 @@
             {% endif %}
         
         {% endfor %}
-        {% for block in self.body %}
-            {% if block.block_type == 'paragraph' %}
-            <strong>{{ block.value }}</strong>
-            {% endif %}  
-        {% endfor %}
-    <!-- <a href="{{ post.url }}">
-        <video class="img-fluid" width="500" height="200" controls>
-          <source src="{{self.video.url}}" type="video/mp4"> 
-        </video> -->
+
     </div>
         
     {% endif %}  
